--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,7 @@ write_basic_package_version_file(${PROJECT_NAME}ConfigVersion.cmake
         ARCH_INDEPENDENT)
 
 if(JSON_STRUCT_OPT_INSTALL)
-    #include(GNUInstallDirs)
+    include(GNUInstallDirs)
 
     install(TARGETS ${PROJECT_NAME}
             EXPORT ${PROJECT_NAME}Config)
